feat:add champion rank list query api
