# server/app/api/champion_rank/enter.go
@@ -1,0 +1,16 @@
+package champion_rank
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type championRankApi struct{}
+
+func InitChampionRankRouter(r *gin.Engine) {
+	api := championRankApi{}
+	championRankApi := r.Group("/champion")
+	{
+		championRankApi.GET("/ARAM", api.QueryChampionRankARAM)
+		championRankApi.GET("/CLASSIC", api.QueryChampionRankCLASSIC)
+	}
+}
